update EDA notebook

--- a/notebook/DataExploration.ipynb
+++ b/notebook/DataExploration.ipynb
@@ -894,6 +894,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "B    357\n",
+       "M    212\n",
+       "Name: diagnosis, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['diagnosis'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -964,7 +986,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Diagnosis Column have 2 unique values Malignant(M) and Benign(B) having count of 62.7 and 37.3 percent respectively."
+    "Diagnosis Column have 2 unique values Malignant(M) and Benign(B) having count of 37.3 and 62.7 percent respectively."
    ]
   },
   {
