update EDA notebook

--- a/notebook/DataExploration.ipynb
+++ b/notebook/DataExploration.ipynb
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1785,7 +1785,7 @@
     }
    ],
    "source": [
-    "to_csv(data)"
+    "to_csv(scaled_features)"
    ]
   },
   {
